# drone_pufferlib

./: .gitignore  README.md  plan.md  pyproject.toml  resources
configs/: env.yaml  eval.yaml  train.yaml  train_kaggle_2x_t4.yaml
drone_pufferlib/: __init__.py
drone_pufferlib/envs/: __init__.py  map_generator.py  navigation_env.py  renderer.py
drone_pufferlib/models/: __init__.py  cnn_policy.py
drone_pufferlib/tools/: manual_play.py
drone_pufferlib/training/: adapter.py  common.py  evaluate.py  ppo.py  train.py
drone_pufferlib/utils/: config.py  metrics.py  seeding.py  visualization.py
kaggle/: kaggle_notebook_cells.md  kaggle_overnight_train.sh
tests/: test_config_overrides.py  test_evaluation_policy.py  test_manual_play.py  test_map_generator.py  test_navigation_env.py  test_seed_progression.py  test_training_smoke.py  test_visualization.py
